Fixed image behind each section and applied filters

--- a/app/scss/_projects.scss
+++ b/app/scss/_projects.scss
@@ -12,40 +12,36 @@
 
 .project {
 	display: flex;
+
 	flex-direction: column;
 	margin-block: var(--size-600);
+	// position: relative;
+	background-color: var(--clr-neutral-800);
+	padding: 1.2em;
+	border-radius: 5px;
+	overflow: hidden;
+	position: relative;
 
 	&__content {
 		position: relative;
-	}
-
-	&__wrapper {
-		position: relative;
-		background-color: var(--clr-neutral-800);
-		// background: url('/public/images/placeholder-project-image.png') center/cover;
-		padding: 1.2em;
-		border-radius: 5px;
-
-		&::before {
-			content: ' ';
-			display: block;
-			position: absolute;
-			left: 0;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			opacity: 5%;
-			border-radius: 5px;
-			background-image: url('/images/placeholder-project-image.png');
-			background-repeat: no-repeat;
-			background-position: 50% 0;
-			background-size: cover;
-		}
+		z-index: 1;
 	}
 
 	&__image {
-		// opacity: 5%;
-		display: none;
+		position: absolute;
+		left: 0;
+		top: 0;
+		z-index: 0;
+		width: 100%;
+		height: 100%;
+
+		> img {
+			object-fit: cover;
+			width: 100%;
+			height: 100%;
+			filter: grayscale(75%) brightness(30%);
+			opacity: 20%;
+		}
 	}
 
 	&__number {
